// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentOpenWith/OpenWithMenu should be disabled with a reason if the integration is disabled 1`] = `
<MenuItem
  isDisabled={true}
  onClick={[Function]}
>
  <IconFileDefault />
  <span>
    <p
      className="bcow-menu-item-title"
    >
      A new integration
    </p>
    <p
      className="bcow-menu-item-description"
    >
      The integration is not currently available
    </p>
  </span>
</MenuItem>
`;

exports[`components/ContentOpenWith/OpenWithMenu should render the description and correct icon 1`] = `
<MenuItem
  onClick={[Function]}
>
  <IconAdobeSign />
  <span>
    <p
      className="bcow-menu-item-title"
    >
      Adobe Sign
    </p>
    <p
      className="bcow-menu-item-description"
    >
      Open With Adobe
    </p>
  </span>
</MenuItem>
`;

exports[`components/ContentOpenWith/OpenWithMenu should use the default error for a disabled integration if there is no reason 1`] = `
<MenuItem
  isDisabled={true}
  onClick={[Function]}
>
  <IconFileDefault />
  <span>
    <p
      className="bcow-menu-item-title"
    >
      A new integration
    </p>
    <p
      className="bcow-menu-item-description"
    >
      <FormattedMessage
        defaultMessage="Opening this file with other services is currently unavailable"
        id="be.errorOpenWithDescription"
      />
    </p>
  </span>
</MenuItem>
`;

exports[`components/ContentOpenWith/OpenWithMenu should use the default icon when no mapping can be found to an existing icon 1`] = `
<MenuItem
  onClick={[Function]}
>
  <IconFileDefault />
  <span>
    <p
      className="bcow-menu-item-title"
    >
      A new integration
    </p>
    <p
      className="bcow-menu-item-description"
    >
      Open With the new integration
    </p>
  </span>
</MenuItem>
`;
